--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Urna Eletrônica</title>
+<title>Insert title here</title>
 </head>
 <body>
 
