--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -17,14 +17,14 @@
 			    <p:growl id="messages" showDetail="true"/>
 	 		<p:spacer width="100" height="50" />
 			    <p:menuButton value="Cadastrar">
-			        <p:menuitem value="Eleitor" actionListener="#{indexBean.toCadastrarEleitor}" update="messages" />
-			        <p:menuitem value="Candidato" actionListener="#{indexBean.toCadastrarCandidato}" update="messages"/>
+			        <p:menuitem value="Eleitor" actionListener="#{IndexBean.toCadastrarEleitor}" update="messages" />
+			        <p:menuitem value="Candidato" actionListener="#{IndexBean.toCadastrarCandidato}" update="messages"/>
 			    </p:menuButton>
 			    <p:growl id="growl" life="2000" />
 			    <p:spacer width="20" height="50" />
-	     	    <p:commandButton value="Deletar" id="ajax" update="growl" actionListener="#{indexBean.toDeletar}" styleClass="ui-priority-primary" />
+	     	    <p:commandButton value="Deletar" id="ajax" update="growl" actionListener="#{IndexBean.toDeletar}" styleClass="ui-priority-primary" />
 	     	    <p:spacer width="20" height="50" />
-	     	    <p:commandButton value="Iniciar uma Eleição"  update="growl" actionListener="#{indexBean.toEntrarEleicao}" styleClass="ui-priority-primary" />
+	     	    <p:commandButton value="Iniciar uma Eleição"  update="growl" actionListener="#{IndexBean.toEntrarEleicao}" styleClass="ui-priority-primary" />
 			</h:form>
 		</p:panel>
 		<p:spacer width="100" height="20" />
