--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -24,7 +24,7 @@
 			    <p:spacer width="20" height="50" />
 	     	    <p:commandButton value="Deletar" id="ajax" update="growl" actionListener="#{IndexBean.toDeletar}" styleClass="ui-priority-primary" />
 	     	    <p:spacer width="20" height="50" />
-	     	    <p:commandButton value="Iniciar uma Eleição"  update="growl" actionListener="#{IndexBean.toEntrarEleicao}" styleClass="ui-priority-primary" />
+	     	    <p:commandButton value="Iniciar uma Eleição"  update="growl" actionListener="#{IndexBean.toEntrarVotacao}" styleClass="ui-priority-primary" />
 			</h:form>
 		</p:panel>
 		<p:spacer width="100" height="20" />
