--- a/WebContent/sessao2.xhtml
+++ b/WebContent/sessao2.xhtml
@@ -5,18 +5,11 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<h:meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Urna de VotaÁ„o - Sess„o 2</title>
+	<title>Urna de Vota√ß√£o - Apura√ß√£o dos Votos</title>
 </h:head>
 <h:body>
-	<h1>Urna EletrÙnica - Sess„o de VotaÁ„o 02</h1>
-	<h3>Sess„o de VotaÁ„o 02, para eleitores cadastrados entre as letras M - Z.</h3>
-	<h:form id="form">
-		<h:outputText value="Votar : " />
-		<h:inputText id="input" value="${sessao2Bean.userInput}" />
-		<h:commandButton value="Votar" action="${sessao2Bean.submit}"
-			onclick="return check();" />
-		<h:outputText value="${sessao2Bean.userInput}" />
-
-	</h:form>
+	<h1>Urna Eletr√¥nica - Apura√ß√£o dos Votos</h1>
+	<h3>Apura√ß√£o dos Votos.</h3>
+	
 </h:body>
 </html>
