--- a/WebContent/sessao2.xhtml
+++ b/WebContent/sessao2.xhtml
@@ -8,8 +8,31 @@
 	<title>Urna de Votação - Apuração dos Votos</title>
 </h:head>
 <h:body>
-	<h1>Urna Eletrônica - Apuração dos Votos</h1>
+	<h1>Urna Eletrônica - Apuração dos Votos Presidente</h1>
 	<h3>Apuração dos Votos.</h3>
+	<h2>Quantidade de votos de cada candidato:</h2>
+	<h2>Quantidade de votos brancos:</h2>
+	<h2>Quantidade de votos nulos:</h2>
+	<h2>Candidato mais votado (eleito):</h2>
+	<h2>Candidato menos votado:</h2>
+	<h2>Quantidade de eleitores que comparaceram a votação:</h2>
 	
+	<h1>Urna Eletrônica - Apuração dos Votos Governador</h1>
+	<h3>Apuração dos Votos.</h3>
+	<h2>Quantidade de votos de cada candidato:</h2>
+	<h2>Quantidade de votos brancos:</h2>
+	<h2>Quantidade de votos nulos:</h2>
+	<h2>Candidato mais votado (eleito):</h2>
+	<h2>Candidato menos votado:</h2>
+	<h2>Quantidade de eleitores que comparaceram a votação:</h2>
+	
+	<h1>Urna Eletrônica - Apuração dos Votos Prefeito</h1>
+	<h3>Apuração dos Votos.</h3>
+	<h2>Quantidade de votos de cada candidato:</h2>
+	<h2>Quantidade de votos brancos:</h2>
+	<h2>Quantidade de votos nulos:</h2>
+	<h2>Candidato mais votado (eleito):</h2>
+	<h2>Candidato menos votado:</h2>
+	<h2>Quantidade de eleitores que comparaceram a votação:</h2>
 </h:body>
 </html>
